package com.springboot.springbootdemo.DataModel;

public class ItemType
{
    private String itemTypeId;
    private String itemTypeName;

    public String getItemTypeId()
    {
        return itemTypeId;
    }

    public void setItemTypeId(String itemTypeId)
    {
        this.itemTypeId = itemTypeId;
    }

    public String getItemTypeName()
    {
        return itemTypeName;
    }

    public void setItemTypeName(String itemTypeName)
    {
        this.itemTypeName = itemTypeName;
    }
}