package com.springboot.springbootdemo.DataModel;

public class RelationType
{
    private String relationTypeId;
    private String relationTypeName;

    public String getRelationTypeId()
    {
        return relationTypeId;
    }

    public void setRelationTypeId(String relationTypeId)
    {
        this.relationTypeId = relationTypeId;
    }

    public String getRelationTypeName()
    {
        return relationTypeName;
    }

    public void setRelationTypeName(String relationTypeName)
    {
        this.relationTypeName = relationTypeName;
    }
}