package com.springboot.springbootdemo;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SpringbootApplication
{
    public static void main(String[] args)
    {
        SpringApplication.run(SpringbootApplication.class, args);

    }
}