@startuml

title __SPRINGBOOT's Class Diagram__\n

  package  {
    package com.springboot.springbootdemo {
      package com.springboot.springbootdemo.DataModel {
        class BillPayment {
        }
      }
    }
  }
  

  package  {
    package com.springboot.springbootdemo {
      package com.springboot.springbootdemo.DataModel {
        class FinalResponse {
        }
      }
    }
  }
  

  package  {
    package com.springboot.springbootdemo {
      package com.springboot.springbootdemo.DataModel {
        class ItemType {
        }
      }
    }
  }
  

  package  {
    class MavenWrapperDownloader {
    }
  }
  

  package  {
    package com.springboot.springbootdemo {
      package com.springboot.springbootdemo.DataModel {
        class RelationType {
        }
      }
    }
  }
  

  package  {
    package com.springboot.springbootdemo {
      package com.springboot.springbootdemo.BusinessObject {
        interface SpringBootBO {
        }
      }
    }
  }
  

  package  {
    package com.springboot.springbootdemo {
      package com.springboot.springbootdemo.controller {
        class SpringBootController {
        }
      }
    }
  }
  

  package  {
    package com.springboot.springbootdemo {
      package com.springboot.springbootdemo.BusinessObject {
        package com.springboot.springbootdemo.BusinessObject.SpringBootBusinessObjectImpl {
          class SpringBootImpl {
          }
        }
      }
    }
  }
  

  package  {
    package com.springboot.springbootdemo {
      class SpringbootApplication {
      }
    }
  }
  

  package  {
    package com.springboot.springbootdemo {
      package com.springboot.springbootdemo.DataModel {
        class User {
        }
      }
    }
  }
  

  BillPayment o-- ItemType : itemType
  SpringBootController o-- SpringBootBO : bootBO
  SpringBootImpl -up-|> SpringBootBO
  User o-- RelationType : relationType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
